# change-risk-predictor-

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  Dockerfile  Makefile  Procfile  README.md  SECURITY.md  TECH_ROADMAP.md  action.yml  compliancebot.yaml  docker-compose.demo.yml  docker-compose.yml  implementation_plan.md  out5.json  pyproject.toml  releasegate.yaml  render.yaml  repos.yaml  requirements.txt  result.json  results.md  risk_result.json  test.txt  walkthrough.md
.claude/: launch.json
attestation/: verify.py
compliancebot/: __main__.py  cli.py  config.py  engine.py  main.py  server.py
dashboard-ui/: .env.example  .gitignore  package-lock.json  package.json  playwright.config.js  tailwind.config.ts  tsconfig.tsbuildinfo
data/: runs.jsonl
demo/: demo-policies.json  demo-scenarios.md  seed-demo-data.py
docs/: ATTESTATION.md  AUDITOR_QUICKSTART.md  AUDIT_PACK.md  README.md  VERIFICATION.md  architecture.md  decision-model.md  demo-flow.md  external-anchoring-wave-plan-55.md  forge-hardening.md  forge-installation.md  install-2-hour-guide.md  install-guide.md  jira-config.md  multi_region_strategy.md  phase10_jira_enforcement.md  phase1_confirmed.md  phase8_packaging.md  phase8_saas_mvp.md  phase9_multi_repo_policy.md  phase9_releasegate.md  policy-dsl.md  security.md  security_and_roles.md  sla.md  sla_failure_modes.md  transparency_merkle.md
forge/: manifest.yml  package-lock.json  package.json
plans/: 2026-04-21-phased-roadmap-to-series-a.md
releasegate/: __main__.py  cli.py  config.py  (+3 more)
(+864 files in other folders)
